--- a/app/views/beverages/_form.html.erb
+++ b/app/views/beverages/_form.html.erb
@@ -12,26 +12,24 @@
   <% end %>
 
   <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <% form.label :name, style: "display: block" %>
+    <%= form.text_field :name, class:"form-control mt-2", placeholder:"Name" %>
   </div>
 
   <div>
-    <%= form.label :category, style: "display: block" %>
-    <%= form.text_field :category %>
+    <% form.label :category, style: "display: block" %>
+    <%= form.text_field :category, class:"form-control mt-2", placeholder:"Category" %>
   </div>
 
   <div>
-    <%= form.label :packaging, style: "display: block" %>
-    <%= form.text_field :packaging %>
+    <% form.label :packaging, style: "display: block" %>
+    <%= form.text_field :packaging, class:"form-control mt-2", placeholder:"Packaging" %>
   </div>
 
   <div>
-    <%= form.label :price, style: "display: block" %>
-    <%= form.number_field :price %>
+    <% form.label :price, style: "display: block" %>
+    <%= form.number_field :price, class:"form-control mt-2", placeholder:"Price" %>
   </div>
 
-  <div>
-    <%= form.submit %>
-  </div>
+  <%= form.submit class:"btn btn-primary mt-4" %>
 <% end %>
