--- a/app/views/beverages/edit.html.erb
+++ b/app/views/beverages/edit.html.erb
@@ -4,7 +4,4 @@
 
 <br>
 
-<div>
-  <%= link_to "Show this beverage", @beverage %> |
-  <%= link_to "Back to beverages", beverages_path %>
-</div>
+<%= link_to "Back to beverages", beverages_path, class:"btn btn-secondary" %>
