--- a/app/views/beverages/new.html.erb
+++ b/app/views/beverages/new.html.erb
@@ -1,9 +1,7 @@
-<h1>New beverage</h1>
+<h1 class="display-6 mb-4">Add beverage</h1>
 
 <%= render "form", beverage: @beverage %>
 
 <br>
 
-<div>
-  <%= link_to "Back to beverages", beverages_path %>
-</div>
+<%= link_to "Back to beverages", beverages_path, class:"btn btn-secondary" %>
