--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,16 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <br/>
+      <% if notice!=nil %>
+        <div class="alert alert-warning" role="alert">
+          <%= notice %>
+        </div>
+      <% end %>
+      <%= yield %>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
