--- a/app/views/navbar/_navbar.html.erb
+++ b/app/views/navbar/_navbar.html.erb
@@ -10,16 +10,16 @@
           <%= link_to 'Home', root_path, class:"nav-link active" %>
         </li>
         <li class="nav-item">
-            <%= link_to 'Register', new_user_registration_path, class:"nav-link" %>
+            <%= link_to 'Sign Up', new_user_registration_path, class:"nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Login', new_user_session_path, class:"nav-link" %>
+          <%= link_to 'Sign In', new_user_session_path, class:"nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to 'Edit Profile', edit_user_registration_path, class:"nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Logout', destroy_user_session_path, method: :delete, class:"nav-link" %>
+          <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class:"nav-link" %>
         </li>
       </ul>
     </div>
