--- a/app/views/beverages/index.html.erb
+++ b/app/views/beverages/index.html.erb
@@ -1,10 +1,12 @@
 <div class="d-flex justify-content-between align-items-center">
   <h1 class="display-6">Beverages</h1>
-  <%= link_to "Add beverage", new_beverage_path, class:"btn btn-outline-success" %>
+  <% if user_signed_in? %>
+    <%= link_to "Add beverage", new_beverage_path, class:"btn btn-outline-success" %>
+  <% end %>
 </div>
 
 <div id="beverages" class="mt-2">
-  <table class="table table-dark table-striped">
+  <table class="table table-striped table-hover">
     <thead>
       <th scope="col">#</th>
       <th scope="col">Beverage</th>
@@ -17,7 +19,7 @@
       <% @beverages.each do |beverage| %>
         <tr>
           <th scope="row"><%= counter %></th>
-          <td><%= link_to beverage.name, beverage, class:"link-light link-underline link-underline-opacity-0" %></td>
+          <td><%= link_to beverage.name, beverage, class:"link-dark link-underline link-underline-opacity-0" %></td>
           <td><%= beverage.category %></td>
           <td><%= beverage.packaging %></td>
           <td>₹ <%= beverage.price %></td>
