--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
 
-  <body>
-    <%= render 'navbar/navbar' %>
+  <body class="bg-white">
+    <% if user_signed_in? %>
+      <%= render 'navbar/navbar' %>
+    <% end %>
     <div class="container">
       <br/>
       <% if notice!=nil %>
