--- a/app/views/navbar/_navbar.html.erb
+++ b/app/views/navbar/_navbar.html.erb
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg" style="background-color: #EF8354;">
   <div class="container container-fluid">
-    <h3 class="display-6">Admin Settings</h3>
+    <h3 class="display-6 pe-5">Admin Settings</h3>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,18 +9,22 @@
         <li class="nav-item">
           <%= link_to 'Home', root_path, class:"nav-link active" %>
         </li>
-        <li class="nav-item">
-            <%= link_to 'Sign Up', new_user_registration_path, class:"nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Sign In', new_user_session_path, class:"nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Edit Profile', edit_user_registration_path, class:"nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class:"nav-link" %>
-        </li>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to 'Edit Profile', edit_user_registration_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class:"nav-link" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+              <%= link_to 'Sign Up', new_user_registration_path, class:"nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Sign In', new_user_session_path, class:"nav-link" %>
+          </li>
+        <% end %>
+        
       </ul>
     </div>
   </div>
