Renamed packaging to quantity

--- a/app/views/beverages/_form.html.erb
+++ b/app/views/beverages/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div>
-    <% form.label :packaging, style: "display: block" %>
-    <%= form.text_field :packaging, class:"form-control mt-2", placeholder:"Packaging" %>
+    <% form.label :quantity, style: "display: block" %>
+    <%= form.text_field :quantity, class:"form-control mt-2", placeholder:"Quantity" %>
   </div>
 
   <div>
