--- a/app/views/beverages/show.html.erb
+++ b/app/views/beverages/show.html.erb
@@ -9,7 +9,7 @@
     </p>
 
     <p class="col-md-8 fs-4">
-      <%= @beverage.packaging %>
+      <%= @beverage.quantity %>
     </p>
 
     <p class="col-md-8 fs-4">
