--- a/app/views/beverages/index.html.erb
+++ b/app/views/beverages/index.html.erb
@@ -24,7 +24,7 @@
           <% else %>
             <td><%= beverage.name%></td>
           <% end %>
-          <td><%= beverage.category %></td>
+          <td><%= beverage.category_id %></td>
           <td><%= beverage.quantity %></td>
           <td>₹ <%= beverage.price %></td>
         </tr>
