--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
 
-  <body class="bg-white">
+  <body style="color: #4B5563" class="bg-white">
     <% if user_signed_in? %>
       <%= render 'navbar/navbar' %>
     <% else %>
       <nav class="shadow-sm p-3 mb-5 bg-body-tertiary rounded navbar navbar-expand-lg" style="background-color: #e5e5e5;">
-        <div class="container container-fluid d-flex justify-content-center">
+        <div class="container container-fluid d-flex justify-content-center flex-column">
           <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="<%= asset_path('logo.png') %>" alt="Logo" height="120">
-            <span class="display-1 ms-4">Golmaal Bar</span>
+            <img src="<%= asset_path('chetak-wine-store-logo.png') %>" alt="Logo" height="120">
+            <h1 style="color: #4B5563" class="display-2 fw-medium">Chetak Wine Store</h1>
           </a>
+          <p style="color: #4B5563" class="fs-5 p-0 m-0 fw-medium">A unit of <strong> Vinayak Traders</strong></p>
         </div>
       </nav>
     <% end %>
